css/main.css
/* ... */
/*  .post-meta__tags {
    margin-left: .2em; 
    background-color: #efefef;
    border-width: 1px;
    border-color: #eee;
    color: #333;
    font-size: 2.0em;
  }
*/
 /* .post-meta__author {
    margin-left: 1.5em; 
  }

  .post-meta__avatar {
    display: inline-block;
    width: 22px;
    height: 22px;
    margin: 0 .3em -.4em 0;
    border: none;
    box-shadow: none; 
  }*/

  .post img {
    max-width: 100%;
    margin: 0 auto;
    border-radius: 3px;
    text-align: center;
    display: block; }
  .post pre {
    width: 95%;
    overflow: auto; }
  .post hr {
    display: block;
    width: 30%;
    margin: 2em 0;
    border-top: 1px solid #DDDDDD; }

  .panel {
    display: table;
    width: 100%;
    height: 100%; }

  .panel__vertical {
    display: table-cell;
    vertical-align: middle; }

  .panel-title {
    margin: 0 0 5px 0;
    margin-top: 20px;
    font-size: 1.8em;
    letter-spacing: 4px;
    color: #FFF; }

  .panel-subtitle {
    font-family: "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", "Lucida Grande", "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
    font-size: 0.8em;/*自留地*/
    font-weight: lighter;
    letter-spacing: 3px;
    color:#FF0000;
    -webkit-font-smoothing: antialiased; }

  .panel-cover {
    display: block;
    position: fixed;
    z-index: 900;
    width: 100%;
    max-width: none;
    height: 100%;
    background: #ffffff;
    /* background: url(http://api.dujin.org/bing/1920.php) top left no-repeat ; */
    background-size: cover; }

  .panel-cover--collapsed {
    width: 22%;
    max-width: 320px; }

  .panel-cover--overlay {
    display: block;
    position: absolute;
    z-index: 0;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(68, 68, 68, 0.6);
    background-image: -webkit-linear-gradient(-410deg, rgba(68, 68, 68, 0.6) 20%, rgba(0, 0, 0, 0.9));
    background-image: linear-gradient(140deg,rgba(68, 68, 68, 0.6) 20%, rgba(0, 0, 0, 0.9)); }

  .panel-cover__logo {
    margin-bottom: .2em; }

  .panel-cover__description {
    margin: 0 30px; 
   font-weight:500;
}

  .panel-cover__divider {
    width: 50%;
    margin: 20px auto;
    border-top: 1px solid rgba(255, 255, 255, 0.14); }

  .panel-cover__divider--secondary {
    width: 15%; }

  .panel-main {
    display: table;
    width: 100%;
    height: 100%; }

  .panel-main__inner {
    display: table-cell;
    vertical-align: middle;
    position: relative;
    z-index: 800;
    padding: 0 0px; }

  .panel-main__content {
    max-width: 620px;
    margin: 0 auto; }

  .panel-main__content--fixed {
    width: 480px;
    transition: width 1s;
    -webkit-transition: width 1s;
    /* Safari */ }

  .panel-inverted {
    font-weight: 100;
    text-align: center;
    color: #FFF;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4); }
  .panel-inverted a {
    color: #FFF; }

  .cover-navigation {
    margin-top: 0px; 
    width: 100%;
  }
  .cover-blue {
    background-color: rgba(37, 104, 163, 0.6);
    background-image: -webkit-linear-gradient(-410deg, rgba(37, 104, 163, 0.6) 20%, rgba(18, 51, 80, 0.8));
    background-image: linear-gradient(140deg,rgba(37, 104, 163, 0.6) 20%, rgba(18, 51, 80, 0.8)); }

  .cover-green {
    background-color: rgba(21, 111, 120, 0.6);
    background-image: -webkit-linear-gradient(-410deg, rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8));
    background-image: linear-gradient(140deg,rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8)); }

  .cover-purple {
    background-color: rgba(73, 50, 82, 0.6);
    background-image: -webkit-linear-gradient(-410deg, rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8));
    background-image: linear-gradient(140deg,rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8)); }

  .cover-red {
    background-color: rgba(119, 31, 18, 0.6);
    background-image: -webkit-linear-gradient(-410deg, rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8));
    background-image: linear-gradient(140deg,rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8)); }

  .cover-orange {
    background-color: rgba(174, 80, 4, 0.6);
    background-image: -webkit-linear-gradient(-410deg, rgba(174, 80, 4, 0.6) 20%, rgba(74, 34, 2, 0.8));
    background-image: linear-gradient(140deg,rgba(174, 80, 4, 0.6) 20%, rgba(74, 34, 2, 0.8)); }

  .cover-slate {
    background-color: rgba(61, 66, 96, 0.6);
    background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
    background-image: linear-gradient(140deg,rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8)); }

  .cover-disabled {
    background: none; 
  }

  .navigation__flink {
    color: #999;
    margin-top: 40px;
    text-align: left;
    font-size: 0.6em;
  }

  .btn, .navigation__flink_item a {
    display: block;
    text-align: left;  
    margin-left: 10px;
    margin-right: 10px;
    font-size: 0.4em;
    color: #666;
    border-bottom: 0.1px solid #666;
    text-shadow: none;
  }
  .btn:hover, .navigation__flink_item a:hover {
    color: #fff;
    border-color: #fff; 
  }

  .btn-border-small {
    font-size: 1.0em;
    height: 30px;
    margin-left: 20px; 
    color: #458B74;
  }

  .btn-secondary {
    border-color: #5BA4E5;
    color: #5BA4E5; 
  }
  .btn-secondary:hover {
    color: #217fd2;
    border-color: #217fd2; 
  }

  .btn-tertiary {
    border-color: #999999;
    color: #999999; 
  }
  .btn-tertiary:hover {
    color: #737373;
    border-color: #737373; 
  }

  .btn-large {
    padding: 10px 24px;
    font-size: 1.1em; 
  }

  .btn-small {
    padding: 8px 12px;
    font-size: 0.7em; 
  }

  .btn-mobile-menu {
    display: none;
    position: fixed;
    z-index: 9999;
    width: 100%;
    height: 40px;
    background: rgba(51, 51, 51, 0.98);
    text-align: center; 
  }
  .btn-mobile-menu_item {
    position: relative;
    top: 12px;
    margin-right: 20px;
    float: right;;
    color: #FFF; 
  }
  .btn-mobile-menu_item a {
    color: #666; 
  }
/* ... */

